# zoop

./: README.md  pyproject.toml  zoop.py
.claude-plugin/: marketplace.json  plugin.json
integrations/: README.md
integrations/codex/: README.md
integrations/codex/skills/zoop/: SKILL.md
integrations/cursor/: README.md
integrations/cursor/rules/: zoop.mdc
skills/blip-send/: SKILL.md
skills/zoop/: SKILL.md
src/blip_cli/: cli.py  devices.py
src/zoop/: __init__.py  cli.py  devices.py  macsend.py  platforms.py
tests/: test_devices.py
