[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "zoop-cli"
version = "0.1.0"
description = "Send files through the genuine Blip app from the command line (cross-platform)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Benjamin Holderbein" }]
keywords = ["blip", "file-transfer", "cli", "claude-code"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
zoop = "zoop.cli:main"

[project.urls]
Homepage = "https://github.com/BenjaminHolderbein/zoop"
Repository = "https://github.com/BenjaminHolderbein/zoop"

[tool.setuptools.packages.find]
where = ["src"]
